# wchresta.github.io

./: LICENSE  Makefile  README.md  about.html  about.markdown  archive.html  contact.html  contact.markdown  index.html  site.hs  stack.yaml  wchresta-github-io.cabal
assets/css/: font-awesome.min.css  main.css
posts/: 2015-08-23-example.html  2018-11-19-fear-of-maintenance-spiral.html  2018-11-19-fear-of-maintenance-spiral.markdown
templates/: archive.html  default.html  post-list.html  post.html  wrapper.html
