name:                wchresta-github-io
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wchresta/wchresta-github-io#readme
license:             BSD3
license-file:        LICENSE
author:              Wanja Chresta
maintainer:          wanja.hs@chrummibei.ch
copyright:           2018, Wanja Chresta
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable wchresta-github-io
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll
